# SMILES-RL

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SMILES-RL.yml  pyproject.toml  run.py
create_configs/: create_a2c_config.py  create_acer_config.py  create_ppo_config.py  create_regularized_mle_config.py  create_regularized_mle_novelty_config.py  create_sac_config.py
create_configs/utils/: logging.py
predictive_models/DRD2/: create_DRD2_data_and_models.py
smiles_rl/: configuration_envelope.py
smiles_rl/agent/: a2c.py  acer.py  base_agent.py  ppo.py  regularized_mle.py  regularized_mle_novelty.py  sac.py
smiles_rl/agent/configurations/: reinforcement_learning_configuration.py
smiles_rl/agent/utils/: margin_guard.py  rewards.py  sample.py
smiles_rl/diversity_filter/: base_diversity_filter.py  chem.py  diverse_hits.py  diversity_filter.py  diversity_filter_factory.py  diversity_filter_memory.py  diversity_filter_parameters.py  identical_murcko_scaffold.py  information.py  mean_similarity.py  mean_similarity_random.py  min_similarity.py  min_similarity_random.py  no_scaffold_filter.py  reinvent_diversity_filter_factory.py  rnd.py  selection.py  simgraph.py  soft_identical_murcko_scaffold.py  soft_information.py  soft_rnd.py  ucb_murcko_scaffold.py
smiles_rl/diversity_filter/utils/: soft_penalty.py
smiles_rl/logging/: base_reinforcement_logger.py  configuration.py  console_message.py  local_reinforcement_logger.py  reinforcement_log_configuration.py  reinforcement_logger.py  remote_logging.py  remote_reinforcement_logger.py
smiles_rl/model/: actor_model.py  critic_model.py  dataset.py  default_model.py  rnn.py  rnn_shared.py  shared_model.py  smiles_tokenizer.py  vocabulary.py
smiles_rl/replay_buffer/: all_current.py  base_replay_buffer.py  bin_current.py  bin_history.py  top_bot_current.py  top_bot_history.py  top_current.py  top_history.py
smiles_rl/replay_buffer/utils/: chem.py
smiles_rl/scoring/: reinvent_scoring_factory.py  tdc_scoring_factory.py
smiles_rl/utils/: general.py
