[tool.poetry]
name = "smiles-rnn-rl"
version = "1.0.0"
description = ""
authors = ["Hampus Gummesson Svensson <hampusgs@gmail.com>"]
readme = "README.md"
packages = [{include = "smiles_rl"}]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.10"
reinvent-scoring = "^0.0.73"
reinvent-chemistry = "^0.0.51"
numpy = "^1.24.1"
dacite = "^1.7.0"
pandas = "^1.5.2"
pydantic = "^1.10.4"
requests = "^2.28.1"
torch = "^1.13.1"
rdkit = "^2022.9.3"
pathos = "^0.3.0"
scipy = "^1.10.0"
tensorboard = "^2.11.0"
scikit-learn = "^1.2.0"
reinvent-models = "^0.0.14"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
